# lgcns-mlops-practice

./: batch_prediction.py  drift_detection.py  prediction_drift.json  pyproject.toml  train.py
notebooks/: drift_detection.ipynb  online_serving.ipynb
predictions/: 20240328_rent_prediction.csv
src/: preprocess.py
src/common/: logger.py
